<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calorie">

    <fragment
        android:id="@+id/nav_calorie"
        android:name="com.example.diettracker.ui.calorie.CalorieFragment"
        android:label="@string/menu_calorie_stats"
        tools:layout="@layout/fragment_calorie" />

    <fragment
        android:id="@+id/nav_food"
        android:name="com.example.diettracker.ui.food.FoodFragment"
        android:label="@string/menu_food_stats"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.diettracker.ui.profile.ProfileFragment"
        android:label="@string/menu_profile_tab"
        tools:layout="@layout/fragment_profile" />
</navigation>