<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:fontFamily="@font/cabin_bold"
        android:textColor="@color/text"

        android:text="@string/top_6_nutrients"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text"

        android:text="Take a look to make choice"
        app:layout_constraintEnd_toEndOf="@+id/txtDisplay"
        app:layout_constraintStart_toStartOf="@+id/txtDisplay"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplay"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/dialog_nutrient1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cabin_bold"

        android:maxLength="15"
        android:text="@string/protein"
        android:textColor="@color/text"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_nutrient_unit1"
        app:layout_constraintEnd_toStartOf="@+id/dialog_nutrient_unit1"
        app:layout_constraintTop_toTopOf="@+id/dialog_nutrient_unit1" />
    <TextView
        android:id="@+id/dialog_nutrient_unit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/units"

        android:fontFamily="@font/montserrat"
        android:textColor="@color/text"
        android:textSize="12dp"


        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="1sp"
        android:layout_height="80sp"
        android:layout_marginTop="32dp"
        android:background="@color/dark_orange"

        android:fontFamily="@font/montserrat"
        android:textColor="@color/text"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/dialog_nutrient2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cabin_bold"
        android:maxLength="15"


        android:text="@string/carbs"
        android:textColor="@color/text"

        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_nutrient_unit2"
        app:layout_constraintEnd_toStartOf="@+id/dialog_nutrient_unit2"
        app:layout_constraintTop_toTopOf="@+id/dialog_nutrient_unit2" />

    <TextView
        android:id="@+id/dialog_nutrient_unit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/units"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/dialog_nutrient_unit1"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nutrient_unit1" />

    <TextView
        android:id="@+id/dialog_nutrient3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cabin_bold"
        android:maxLength="15"
        android:text="@string/fats"

        android:textColor="@color/text"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_nutrient_unit3"
        app:layout_constraintEnd_toStartOf="@+id/dialog_nutrient_unit3"
        app:layout_constraintTop_toTopOf="@+id/dialog_nutrient_unit3" />

    <TextView
        android:id="@+id/dialog_nutrient_unit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/units"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text"
        android:textSize="12dp"

        app:layout_constraintEnd_toEndOf="@+id/dialog_nutrient_unit2"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nutrient_unit2" />

    <TextView
        android:id="@+id/dialog_nutrient4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/cabin_bold"
        android:maxLength="15"
        android:text="@string/fiber"
        android:textSize="12dp"
        android:textColor="@color/text"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/dialog_nutrient_unit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/units"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text"
        android:textSize="12dp"

        app:layout_constraintBottom_toBottomOf="@+id/dialog_nutrient4"
        app:layout_constraintStart_toEndOf="@+id/dialog_nutrient4"
        app:layout_constraintTop_toTopOf="@+id/dialog_nutrient4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dialog_nutrient5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_bold"

        android:maxLength="15"
        android:text="@string/vitamina"
        android:textColor="@color/text"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/dialog_nutrient4"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nutrient4" />

    <TextView
        android:id="@+id/dialog_nutrient_unit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/units"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_nutrient5"
        app:layout_constraintEnd_toEndOf="@+id/dialog_nutrient_unit4"
        app:layout_constraintTop_toTopOf="@+id/dialog_nutrient5" />

    <TextView
        android:id="@+id/dialog_nutrient6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_bold"
        android:maxLength="15"
        android:text="@string/vitamind"
        android:textColor="@color/text"

        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/dialog_nutrient5"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nutrient5" />

    <TextView
        android:id="@+id/dialog_nutrient_unit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/units"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_nutrient6"
        app:layout_constraintEnd_toEndOf="@+id/dialog_nutrient_unit4"
        app:layout_constraintTop_toTopOf="@+id/dialog_nutrient6"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text"
        android:textSize="12dp"
/>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="53dp"
        android:layout_height="20dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="180dp"
        android:text="@string/in_dv_unit"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>